tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_admin_bulk_update.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "admin_bulk_update",
  "description": "Write/admin: update metadata fields on memories matching filters using the server-resolved principal after checking write access per memory; access_policy accepts shorthand or full object.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "ContextEnvelope": {
        "description": "Context-selection envelope shared by context-aware tools.",
        "type": "object",
        "properties": {
          "refs": {
            "description": "Exact context references.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/ContextReference"
            },
            "default": []
          },
          "hints": {
            "description": "Weak resolver hints. Local paths belong here, never in identities.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "include_descendants": {
            "description": "Include descendants of explicitly selected contexts.",
            "type": "boolean",
            "default": false
          },
          "allow_unresolved": {
            "description": "Permit a governed write to remain contextless.",
            "type": "boolean",
            "default": false
          }
        }
      },
      "ContextReference": {
        "description": "One context locator in a shared context envelope.\n\nExactly one locator form is valid: `id`, `kind` + `key`, or `kind` +\n`identity`.",
        "type": "object",
        "properties": {
          "id": {
            "description": "Stable opaque context ID.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextId"
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "description": "Context kind for key or identity locators.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextKind"
              },
              {
                "type": "null"
              }
            ]
          },
          "key": {
            "description": "Immutable human-readable context key.",
            "type": [
              "string",
              "null"
            ]
          },
          "identity": {
            "description": "Typed durable identity.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextIdentityInput"
              },
              {
                "type": "null"
              }
            ]
          }
        }
      },
      "ContextId": {
        "description": "A ULID-formatted opaque context identifier",
        "type": "string"
      },
      "ContextKind": {
        "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
        "type": "string"
      },
      "ContextIdentityInput": {
        "description": "Typed durable identity supplied by an agent.\n\nThe raw value exists only while the request is normalized. Persistence and\nresponses use [`ContextIdentity`], which contains a fingerprint and a\nredacted label instead.",
        "type": "object",
        "properties": {
          "scheme": {
            "description": "Identity scheme: `git_remote`, `uri`, or `namespaced_id`.",
            "type": "string"
          },
          "value": {
            "description": "Raw identity value. This is never persisted.",
            "type": "string"
          },
          "namespace": {
            "description": "Required only for `namespaced_id`.",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "scheme",
          "value"
        ]
      },
      "MemoryType": {
        "description": "Classifies the kind of knowledge a memory captures.",
        "oneOf": [
          {
            "description": "Facts, definitions, or general knowledge.",
            "type": "string",
            "const": "semantic"
          },
          {
            "description": "Events that happened at a specific time.",
            "type": "string",
            "const": "episodic"
          },
          {
            "description": "Step-by-step instructions or how-tos.",
            "type": "string",
            "const": "procedural"
          }
        ]
      },
      "AccessPolicyInput": {
        "description": "One request access policy accepted by write/update tools.",
        "anyOf": [
          {
            "description": "String shorthand; currently only `\"public\"` is accepted.",
            "$ref": "#/$defs/AccessPolicyShorthand"
          },
          {
            "description": "Full object for `public`, `restricted`, or `redacted` access.",
            "$ref": "#/$defs/AccessPolicy"
          }
        ]
      },
      "AccessPolicyShorthand": {
        "description": "String shorthand accepted by request access policy fields.",
        "oneOf": [
          {
            "description": "Visible to all callers.",
            "type": "string",
            "const": "public"
          }
        ]
      },
      "AccessPolicy": {
        "description": "Controls who can see a memory.",
        "oneOf": [
          {
            "description": "Visible to all callers.",
            "type": "object",
            "properties": {
              "type": {
                "type": "string",
                "const": "public"
              }
            },
            "required": [
              "type"
            ]
          },
          {
            "description": "Visible only to the listed agents.",
            "type": "object",
            "properties": {
              "allowed": {
                "description": "Agent identifiers permitted to access this memory.",
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "type": {
                "type": "string",
                "const": "restricted"
              }
            },
            "required": [
              "type",
              "allowed"
            ]
          },
          {
            "description": "Visible but with some fields hidden from unauthorized callers.",
            "type": "object",
            "properties": {
              "visible_fields": {
                "description": "Field names that remain visible to unauthorized callers.",
                "type": "array",
                "items": {
                  "$ref": "#/$defs/RedactableField"
                }
              },
              "type": {
                "type": "string",
                "const": "redacted"
              }
            },
            "required": [
              "type",
              "visible_fields"
            ]
          }
        ]
      },
      "RedactableField": {
        "description": "A redactable field name (e.g. content, tags, provenance, entities, importance)",
        "type": "string"
      }
    },
    "properties": {
      "tags": {
        "description": "Filter to memories with any of these tags.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "agent_label": {
        "description": "Filter to memories with this agent provenance label.",
        "type": "string"
      },
      "context": {
        "description": "Governed multi-context selection. Cannot be combined with legacy\n`scope` or `scopes`.",
        "$ref": "#/$defs/ContextEnvelope"
      },
      "scope": {
        "description": "Filter by scope key, alias, or value containing a registered matcher.",
        "type": "string"
      },
      "scopes": {
        "description": "Filter by any scope key, alias, or matcher-containing value.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "origin_scope": {
        "description": "Filter to memories whose historical origin scope matches this value.",
        "type": "string"
      },
      "memory_type": {
        "description": "Filter to memories of this type: `\"semantic\"`, `\"episodic\"`, or `\"procedural\"`.",
        "$ref": "#/$defs/MemoryType"
      },
      "include_superseded": {
        "description": "When `true`, include memories that have been superseded by newer versions.\nDefault is `false` — superseded memories are hidden.",
        "type": "boolean"
      },
      "entity": {
        "description": "Filter to memories tagged with this entity name.",
        "type": "string"
      },
      "entity_type": {
        "description": "Filter to memories tagged with entities of this type.",
        "type": "string"
      },
      "text_search": {
        "description": "Additional content filter applied to memory text.",
        "type": "string"
      },
      "set_tags": {
        "description": "New tags to replace existing tags on matching memories.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "importance": {
        "description": "New importance score in [0.0, 1.0]. Clamped to range.",
        "type": "number",
        "format": "double"
      },
      "access_policy": {
        "description": "New access policy to replace existing access policy.",
        "$ref": "#/$defs/AccessPolicyInput"
      },
      "expand_scopes": {
        "description": "When `true` (the default), scope keys are expanded to include\nall ancestor scopes (e.g., `\"org/project/conv\"` also matches `\"org/project\"` and `\"org\"`).\nSet to `false` to disable hierarchical scoping and match only the exact scope keys provided.",
        "type": "boolean",
        "default": true
      }
    },
    "type": "object"
  }
}
