tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_admin_consolidate.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "admin_consolidate",
  "description": "Write/admin: find near-duplicate memories using the server-resolved principal. dry_run=true previews; dry_run=false merges by superseding duplicates. Reports when the configured candidate work limit makes the run partial.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "ContextEnvelope": {
        "description": "Context-selection envelope shared by context-aware tools.",
        "type": "object",
        "properties": {
          "refs": {
            "description": "Exact context references.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/ContextReference"
            },
            "default": []
          },
          "hints": {
            "description": "Weak resolver hints. Local paths belong here, never in identities.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "include_descendants": {
            "description": "Include descendants of explicitly selected contexts.",
            "type": "boolean",
            "default": false
          },
          "allow_unresolved": {
            "description": "Permit a governed write to remain contextless.",
            "type": "boolean",
            "default": false
          }
        }
      },
      "ContextReference": {
        "description": "One context locator in a shared context envelope.\n\nExactly one locator form is valid: `id`, `kind` + `key`, or `kind` +\n`identity`.",
        "type": "object",
        "properties": {
          "id": {
            "description": "Stable opaque context ID.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextId"
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "description": "Context kind for key or identity locators.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextKind"
              },
              {
                "type": "null"
              }
            ]
          },
          "key": {
            "description": "Immutable human-readable context key.",
            "type": [
              "string",
              "null"
            ]
          },
          "identity": {
            "description": "Typed durable identity.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextIdentityInput"
              },
              {
                "type": "null"
              }
            ]
          }
        }
      },
      "ContextId": {
        "description": "A ULID-formatted opaque context identifier",
        "type": "string"
      },
      "ContextKind": {
        "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
        "type": "string"
      },
      "ContextIdentityInput": {
        "description": "Typed durable identity supplied by an agent.\n\nThe raw value exists only while the request is normalized. Persistence and\nresponses use [`ContextIdentity`], which contains a fingerprint and a\nredacted label instead.",
        "type": "object",
        "properties": {
          "scheme": {
            "description": "Identity scheme: `git_remote`, `uri`, or `namespaced_id`.",
            "type": "string"
          },
          "value": {
            "description": "Raw identity value. This is never persisted.",
            "type": "string"
          },
          "namespace": {
            "description": "Required only for `namespaced_id`.",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "scheme",
          "value"
        ]
      }
    },
    "properties": {
      "context": {
        "description": "Governed multi-context selection. Omission means a broad authorized\nscan of contexted memories.",
        "$ref": "#/$defs/ContextEnvelope"
      },
      "scope": {
        "description": "Optional scope filter: registered scope key, alias, or value containing a registered matcher.",
        "type": "string"
      },
      "scopes": {
        "description": "Optional any-match scope filter: scope keys, aliases, or matcher-containing values.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "similarity_threshold": {
        "description": "Cosine similarity threshold for grouping (0.0–1.0). Default is 0.85.",
        "type": "number",
        "format": "double",
        "default": 0.85
      },
      "limit": {
        "description": "Maximum number of duplicate groups to return. Default is 10.",
        "type": "integer",
        "format": "uint",
        "minimum": 0,
        "default": 10
      },
      "dry_run": {
        "description": "When `true` (default), report duplicates without merging.\nWhen `false`, merge by superseding duplicate members.",
        "type": "boolean",
        "default": true
      }
    },
    "type": "object"
  }
}
