tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_admin_count.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "admin_count",
  "description": "Read-like admin: return aggregate memory statistics for memories visible to the server-resolved principal.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "ContextEnvelope": {
        "description": "Context-selection envelope shared by context-aware tools.",
        "type": "object",
        "properties": {
          "refs": {
            "description": "Exact context references.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/ContextReference"
            },
            "default": []
          },
          "hints": {
            "description": "Weak resolver hints. Local paths belong here, never in identities.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "include_descendants": {
            "description": "Include descendants of explicitly selected contexts.",
            "type": "boolean",
            "default": false
          },
          "allow_unresolved": {
            "description": "Permit a governed write to remain contextless.",
            "type": "boolean",
            "default": false
          }
        }
      },
      "ContextReference": {
        "description": "One context locator in a shared context envelope.\n\nExactly one locator form is valid: `id`, `kind` + `key`, or `kind` +\n`identity`.",
        "type": "object",
        "properties": {
          "id": {
            "description": "Stable opaque context ID.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextId"
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "description": "Context kind for key or identity locators.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextKind"
              },
              {
                "type": "null"
              }
            ]
          },
          "key": {
            "description": "Immutable human-readable context key.",
            "type": [
              "string",
              "null"
            ]
          },
          "identity": {
            "description": "Typed durable identity.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextIdentityInput"
              },
              {
                "type": "null"
              }
            ]
          }
        }
      },
      "ContextId": {
        "description": "A ULID-formatted opaque context identifier",
        "type": "string"
      },
      "ContextKind": {
        "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
        "type": "string"
      },
      "ContextIdentityInput": {
        "description": "Typed durable identity supplied by an agent.\n\nThe raw value exists only while the request is normalized. Persistence and\nresponses use [`ContextIdentity`], which contains a fingerprint and a\nredacted label instead.",
        "type": "object",
        "properties": {
          "scheme": {
            "description": "Identity scheme: `git_remote`, `uri`, or `namespaced_id`.",
            "type": "string"
          },
          "value": {
            "description": "Raw identity value. This is never persisted.",
            "type": "string"
          },
          "namespace": {
            "description": "Required only for `namespaced_id`.",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "scheme",
          "value"
        ]
      },
      "MemoryType": {
        "description": "Classifies the kind of knowledge a memory captures.",
        "oneOf": [
          {
            "description": "Facts, definitions, or general knowledge.",
            "type": "string",
            "const": "semantic"
          },
          {
            "description": "Events that happened at a specific time.",
            "type": "string",
            "const": "episodic"
          },
          {
            "description": "Step-by-step instructions or how-tos.",
            "type": "string",
            "const": "procedural"
          }
        ]
      }
    },
    "properties": {
      "tags": {
        "description": "Filter to memories with any of these tags.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "agent_label": {
        "description": "Filter to memories with this agent provenance label.",
        "type": "string"
      },
      "context": {
        "description": "Governed multi-context selection. Cannot be combined with legacy\n`scope` or `scopes`.",
        "$ref": "#/$defs/ContextEnvelope"
      },
      "scope": {
        "description": "Filter by scope key, alias, or value containing a registered matcher.",
        "type": "string"
      },
      "scopes": {
        "description": "Filter by any scope key, alias, or matcher-containing value.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "origin_scope": {
        "description": "Filter to memories whose historical origin scope matches this value.",
        "type": "string"
      },
      "memory_type": {
        "description": "Filter to memories of this type: `\"semantic\"`, `\"episodic\"`, or `\"procedural\"`.",
        "$ref": "#/$defs/MemoryType"
      },
      "include_superseded": {
        "description": "When `true`, include memories that have been superseded by newer versions.\nDefault is `false` — superseded memories are hidden.",
        "type": "boolean"
      },
      "entity": {
        "description": "Filter to memories tagged with this entity name.",
        "type": "string"
      },
      "entity_type": {
        "description": "Filter to memories tagged with entities of this type.",
        "type": "string"
      },
      "top_tags_limit": {
        "description": "How many top tags to return in the breakdown (default 10).",
        "type": "integer",
        "format": "uint",
        "minimum": 0,
        "default": 10
      },
      "expand_scopes": {
        "description": "When `true` (the default), scope keys are expanded to include\nall ancestor scopes (e.g., `\"org/project/conv\"` also matches `\"org/project\"` and `\"org\"`).\nSet to `false` to disable hierarchical scoping and match only the exact scope keys provided.",
        "type": "boolean",
        "default": true
      }
    },
    "type": "object"
  }
}
