tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_admin_history.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "admin_history",
  "description": "Read-like admin: query transactional mutation audit history for one memory visible to the server-resolved principal without returning raw memory content.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "MemoryId": {
        "description": "A ULID-formatted unique memory identifier",
        "type": "string"
      }
    },
    "required": [
      "id"
    ],
    "type": "object",
    "properties": {
      "id": {
        "description": "The memory ID to query audit history for.",
        "$ref": "#/$defs/MemoryId"
      },
      "limit": {
        "description": "Maximum number of audit entries to return. Default is 50; clamped to the server maximum.",
        "type": "integer",
        "format": "uint",
        "minimum": 0,
        "default": 50
      }
    }
  }
}
