tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_admin_migrate_metadata.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "admin_migrate_metadata",
  "description": "Write/admin: add metadata rows for existing memories using the server-resolved principal. dry_run=true previews; original memory content is never rewritten.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "dry_run": {
        "description": "When true, report what would be migrated without inserting metadata rows.",
        "type": "boolean",
        "default": false
      }
    },
    "type": "object"
  }
}
