tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_admin_migration_report.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "admin_migration_report",
  "description": "Write/admin: report conservative metadata migration counts using the server-resolved principal; does not rewrite original memory content.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "object"
  }
}
